# teyed-utils

./: .gitignore  README.md  augment_off_center.py  main.py  make_splits.py  play_video.py  plot_gaze_density.py  predict.py  preprocess_teyed.py  preprocessed_image_viewer.py  pyproject.toml  video_gaze_viewer.py  video_to_frames.py
annotations/: DikablisT_26_13.mp4gaze_vec.txt
splits/: test.txt  train.txt  val.txt
